--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ matrix:
   include:
     - language: java
       jdk:
-        - openjdk8
+        - oraclejdk8
+      addons:
+        apt:
+          packages:
+            - oracle-java8-installer
       install: true
